fpp_analysis/src/test/invalid_symbols/type_as_constant.ref.txt
error: undefined symbol
 --> [ local path prefix ]/invalid_symbols/type_as_constant.fpp:2:14
  |
2 | constant a = T
  |              ^ cannot find constant `T` in scope

